[package]
name = "vulkan-graphics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash = "0.38.0"
ash-window = "0.13.0"
cgmath = "0.18.0"
nalgebra = "0.32.3"
gpu-allocator = { git = "https://github.com/Traverse-Research/gpu-allocator.git", branch = "ash-0.38", features = ["vulkan"]}
vk-shader-macros = "0.2.9"
winit = "0.29.15"
